<resources>
    <string name="app_name">WeakNetVPN</string>
    <string name="notif_channel_vpn">VPN 引擎</string>
    <string name="notif_title_vpn">弱网模拟运行中</string>
    <string name="notif_text_vpn">正在通过本地 VPN 隧道进行弱网模拟</string>
    <string name="action_stop">停止</string>
    <string name="start_vpn">启动弱网模拟</string>
    <string name="stop_vpn">停止弱网模拟</string>
    <string name="status_off">未运行</string>
    <string name="status_on">运行中</string>
    <string name="label_bandwidth">带宽(kbps)</string>
    <string name="label_delay">延迟(ms)</string>
    <string name="label_loss">丢包率(%)</string>
    <string name="label_jitter">抖动(ms)</string>
    <string name="overlay_hint">如需悬浮窗控制面板，请在系统设置中授予悬浮窗权限</string>
</resources>